--- a/projeto 2/css/style.css
+++ b/projeto 2/css/style.css
@@ -5,7 +5,7 @@
 }
 
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/aa.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/receitas-faceis.webp);
     height: 100vh;
     background-size: cover;
     background-position: center;
